--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <section>
-        <div class="row row-eq-height no-gutters">
+    <section id="hero">
+        <div class="row no-gutters">
             <div class="col-lg-6 col-md-12">
                 <div class="container">
                     <nav class="navbar navbar-expand-lg bg-dark">
@@ -58,9 +58,9 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="content-links">
-                            <a href="#" class="d-block mb-5">Learn more <i class="icon ion-md-arrow-forward ml-5s"></i></a>
-
+                       
+                            <a href="#" class="d-block mb-5">Learn more <i class="icon ion-md-arrow-forward ml-3"></i></a>
+                        <div class="content-icons">
                             <ul class="list-inline lead">
                                 <li class="list-inline-item mr-4"><i class="icon ion-logo-instagram"></i></li>
                                 <li class="list-inline-item mr-4"><i class="icon ion-logo-dribbble"></i></li>
@@ -96,7 +96,7 @@
                             <span class="sr-only">Next</span>
                         </a>
                         <div class="carousel-button text-center py-4">
-                            <h2 class="text-primary text-uppercase mb-0">Buy now</h2>
+                            <h2 class="display-5 text-primary text-uppercase text-underline mb-0">Buy now</h2>
                         </div>
                     </div>
                 </div>
