Fix hero max height

--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
                 </div>
                 <div class="container">
                     <div class="content">
-                        <div class="content-title">
-                            <h1 class="display-1 mb-5">Boutique <br>Agency</h1>
-                            <div class="border-xs">
-                                <ul class="list-unstyled lead mb-5 pl-3">
-                                    <li class="mb-2 lead">Professional Service</li>
-                                    <li class="mb-2">Proven Results</li>
-                                    <li>Let's work together</li>
-                                </ul>
-                            </div>
-                        </div>
-                       
-                            <a href="#" class="d-block mb-5">Learn more <i class="icon ion-md-arrow-forward ml-3"></i></a>
-                        <div class="content-icons">
-                            <ul class="list-inline lead">
-                                <li class="list-inline-item mr-4"><i class="icon ion-logo-instagram"></i></li>
-                                <li class="list-inline-item mr-4"><i class="icon ion-logo-dribbble"></i></li>
-                                <li class="list-inline-item mr-4"><i class="icon ion-logo-youtube"></i></li>
-                                <li class="list-inline-item"><i class="icon ion-logo-linkedin"></i></li>
+
+                        <h1 class="display-1 mb-5">Boutique <br>Agency</h1>
+                        <div class="border-xs">
+                            <ul class="list-unstyled lead mb-5 pl-3">
+                                <li class="mb-2 lead">Professional Service</li>
+                                <li class="mb-2">Proven Results</li>
+                                <li>Let's work together</li>
                             </ul>
                         </div>
+
+
+                        <a href="#" class="lead d-block mb-5">Learn more <i class="icon ion-md-arrow-forward ml-3"></i></a>
+
+                        <ul class="list-inline lead">
+                            <li class="list-inline-item mr-4"><i class="icon ion-logo-instagram"></i></li>
+                            <li class="list-inline-item mr-4"><i class="icon ion-logo-dribbble"></i></li>
+                            <li class="list-inline-item mr-4"><i class="icon ion-logo-youtube"></i></li>
+                            <li class="list-inline-item"><i class="icon ion-logo-linkedin"></i></li>
+                        </ul>
+
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
         </div>
     </section>
 
-    <section class="bg-grey p-5">
+    <section id="properties" class="bg-grey p-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
