--- a/index.html
+++ b/index.html
@@ -109,19 +109,9 @@
 
     <section id="properties" class="bg-grey p-5">
         <div class="container">
-            <h2 class="text-primary">Featured Properties</h2>
-            <p class="lead text-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum viverra sed neque dignissim rhoncus.</p>
-            <div class="row mt-5">
-                <div class="col-md-4">
-                    <img src="hero.jpg" class="img-fluid">
-                </div>
-                <div class="col-md-4">
-                    <img src="hero.jpg" class="img-fluid">
-                </div>
-                <div class="col-md-4">
-                    <img src="hero.jpg" class="img-fluid">
-                </div>
-            </div>
+
+            <h4 class="text-center"><a href="https://themesbootstrap.com.mx/" class="text-primary">themesbootstrap.com.mx</a></h4>
+
         </div>
     </section>
 
