--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
             <div class="col-lg-6 col-md-12">
                 <div class="container">
                     <nav class="navbar navbar-expand-lg bg-dark">
-                        <a class="navbar-brand" href="#"><img src="logo.svg" class="logo"></a>
+                        <a class="navbar-brand" href="#"><img src="images/logo.svg" class="logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
                     <div class="content">
 
                         <h1 class="display-1 mb-5">Boutique <br>Agency</h1>
-                        <div class="border-xs">
+                        <div class="left-border">
                             <ul class="list-unstyled lead mb-5 pl-3">
                                 <li class="mb-2 lead">Professional Service</li>
                                 <li class="mb-2">Proven Results</li>
@@ -79,13 +79,13 @@
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="hero.jpg" alt="First slide">
+                                <img class="d-block w-100" src="images/hero.jpg" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="hero.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="images/hero-02.jpg" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="hero.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="images/hero-03.jpg" alt="Third slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
